@@ -54,6 +54,7 @@ o added timestamp in installation logs
 26. ldap-checkpwd.c, sys-checkpwd.c: replaced out() with subprintf()
 27. qmail-rm.c: replaced out(), logerr() with subprintf()
 28. whois.c: replaced logerr(), logerrf() with subprintf()
+29. sys-checkpwd.c: Fixed out of memory error for POSTAUTH
 
 * Sun Apr 23 2023 17:51:54 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.3-1.1%{?dist}
 Release 3.0.3-1.1 Start 01/02/2023 End 23/04/2023
